manager/copmile
-*- mode: compilation; default-directory: "~/samurai-work/manager/" -*-
Compilation started at Thu Sep  5 10:25:27

make -k all
c++ -c -g -Wall playgame.cc -o playgame.o
playgame.cc: In function ‘void playGame(const Configuration&, char**, char*)’:
playgame.cc:154:15: error: ‘coordWIdth’ was not declared in this scope
       << setw(coordWIdth) << config->agents[p].y
               ^~~~~~~~~~
playgame.cc:154:15: note: suggested alternative: ‘coordWidth’
       << setw(coordWIdth) << config->agents[p].y
               ^~~~~~~~~~
               coordWidth
Makefile:13: recipe for target 'playgame.o' failed
make: *** [playgame.o] Error 1
make: Target 'all' not remade because of errors.

Compilation exited abnormally with code 2 at Thu Sep  5 10:25:28
